Update footer styles for improved readability and correct section tag in temples.html

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -130,8 +130,8 @@ img {
    FOOTER
 ============================= */
 footer {
-  background: #6daddb;
-  color: rgb(150, 212, 228);
+  background: #d4dadf;
+  color: rgb(16, 17, 17);
   text-align: center;
   padding: 1rem;
   margin-top: 2rem;
